--- a/css/style2.css
+++ b/css/style2.css
@@ -43,7 +43,8 @@ body {
   box-sizing: border-box;
 }
 
-body, .main-container {
+body,
+.main-container {
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -159,7 +160,6 @@ a {
 }
 .article__item {
   height: 5rem;
-  padding-left: 1rem;
   margin-bottom: 1rem;
   background: white;
   border-radius: 1rem;
@@ -178,7 +178,8 @@ a {
   justify-content: space-between;
 }
 .article__info {
-  width: 80%;
+  margin: 0 1rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -196,7 +197,8 @@ a {
 .article__ok svg {
   background-size: cover;
   height: 1.3rem;
-  padding: 0; /* reset */
+  padding: 0;
+  /* reset */
   width: 1.3rem;
   fill: #ffffff;
 }
@@ -207,7 +209,6 @@ a {
 }
 
 .euro {
-  margin-right: 1rem;
   font-family: Roboto-Bold;
 }
 
@@ -249,10 +250,11 @@ a {
 }
 .nav__link--purple {
   background: linear-gradient(-4.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  transition: opacity 400ms;
+  opacity: 100%;
 }
-.nav__link--purple:hover {
+.nav__link:hover {
   opacity: 80%;
-  transform: scale(1.1);
   transition: transform 400ms;
 }
 
